k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mi-aplicacion
  labels:
    name: mi-aplicacion
    environment: staging
