k8s/base/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app
  namespace: mi-aplicacion
  labels:
    app: frontend
    version: v1.0.0
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        version: v1.0.0
    spec:
        containers:
        - name: frontend-app
          image: gcr.io/mi-proyecto/frontend-app:v1.0.0
          ports:
          - containerPort: 5001
          env: # <--- AÑADE ESTA SECCIÓN COMPLETA
          - name: BACKEND_URL
            value: "http://backend-service:5002"
