k8s/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: mi-aplicacion
spec:
  type: NodePort
  ports:
    - port: 5001
      targetPort: 5001
      nodePort: 30080
  selector:
    app: frontend
